--- a/style.css
+++ b/style.css
@@ -490,6 +490,21 @@
             color: var(--secondary);
         }
 
+        .contact-container a::after {
+            content: '';
+            position: absolute;
+            bottom: -5px;
+            left: 11.5%;
+            width: 0;
+            height: 2px;
+            background: var(--secondary);
+            transition: var(--transition);
+        }
+
+        .contact-container a:hover::after {
+            width: 45%;
+        }
+
         .contact-icon {
             width: 50px;
             height: 50px;
@@ -766,3 +781,4 @@
             }
 
         }
+
