--- a/style.css
+++ b/style.css
@@ -713,6 +713,21 @@
                 grid-template-columns: 1fr;
             }
 
+        .contact-container a::after {
+            content: '';
+            position: absolute;
+            bottom: -5px;
+            left: 16%;
+            width: 0;
+            height: 2px;
+            background: var(--secondary);
+            transition: var(--transition);
+            }
+
+            .contact-container a:hover::after {
+                width: 60%;
+            }
+
             .hero h1 {
                 font-size: 2.8rem;
             }
@@ -781,4 +796,5 @@
             }
 
         }
+
 
